# wikinarrator

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/Notebooks/: Histoire du Jazz - deepzen.txt  Histoire du Jazz.txt  einstein_wiki_text.txt  highlighting.ipynb  parser_test.ipynb  test.ipynb  text_cleaning.ipynb
backend/app/: main.py  response_models.py  text_cleaner.py  text_highlighter.py  wikipedia_api.py
backend/data/: dictionnaire.txt  gutenberg_dictionary.txt  themes_sous-themes.csv
frontend/: .env  Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  App.vue~improvements  main.js  main.ts
frontend/src/components/: NavBar.vue
