[tool.poetry]
name = "wikinarrator"
version = "0.1.0"
description = "Wikipedia article retriever and speech generator"
authors = ["Karl Hayek <k.hayek@groupeonepont.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
watchgod = "^0.8"
pymediawiki = "^0.7.1"
Wikipedia-API = "^0.5.4"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
